# Design_Patterns

./: CMakeLists.txt  main.cpp
Builder/: ConstructInvoice.cpp  ConstructInvoice.h  Constructor.cpp  Constructor.h
Chain of Responsibility/: AmountDiscount.cpp  AmountDiscount.h  Discount.cpp  Discount.h  DiscountManagement.cpp  DiscountManagement.h  QuantityDiscount.cpp  QuantityDiscount.h  SpecialDiscount.cpp  SpecialDiscount.h
Discounts/: AmountDiscount.cpp  AmountDiscount.h  Discount.h  QuantityDiscount.h  SpecialDiscount.h
Observers/: Bank.cpp  Bank.h  Email.cpp  Email.h  Observer.cpp  Observer.h
States/: Approved.cpp  Approved.h  Denied.cpp  Denied.h  Finished.cpp  Finished.h  Status.cpp  Status.h  Waiting.cpp  Waiting.h
Strategy/: Budget.cpp  Budget.h  ICMS.cpp  ICMS.h  IOF.cpp  IOF.h  PIS.cpp  PIS.h  Taxation.cpp  Taxation.h  TaxationManagement.cpp  TaxationManagement.h
Tributes/: ICMS.cpp  ICMS.h  IOF.cpp  IOF.h  IPI.cpp  IPI.h  Taxation.cpp  Taxation.h
base/: Budget.cpp  Budget.h  Client.cpp  Client.h  Invoice.cpp  Invoice.h  Item.cpp  Item.h
